# $Id$

2009-03-06	Sergey S. Sergeev

	* main/Flow/MethodMappedController.class.php: import attached vars to form.

2009-03-06	Vladlen Y. Koshelev

	* core/Form/Primitives/PrimitiveIdentifier.class.php: actualImportValue()
	hook added.

2009-03-05	Vladlen Y. Koshelev

	* main/Flow/BaseEditor.class.php: ability to change default action added.

2009-03-04	Konstantin V. Arkhipov

	* core/Types/Date.class.php, core/Types/Timestamp.class.php: now
	internal integer's date representation are rounded to days during
	Date's import.

2009-02-27	Sergey S. Sergeev

	* incubator/classes/TSearch, test/incubator/TSearch: utils for building
	tsearch index added.

2009-02-26	Vladlen Y. Koshelev

	* core/DB/PostgresError.class.php, test/code/PostgresErrorTest.class.php:
	added conversion methods for internal numeric representation of error code
	(toCode(), getByCode(), checkCode()) and corresponding test.
	Thanks to Ivan Y. Khvostishkov.

	* core/DB/PgSQL.class.php: pass numeric error code value to
	DatabaseException.

2009-02-25	Vladlen Y. Koshelev

	* core/Exceptions/SoapFault.class.php: extends BaseException as a usual
	runtime exception.

2009-02-22	Konstantin V. Arkhipov

	* core/Form/Primitives/PrimitiveIntegerIdentifier.class.php,
	core/Form/Primitives/PrimitiveScalarIdentifier.class.php: new
	primitives introduced.

2009-02-20	Denis M. Gabaidulin

	* main/Math/MathUtils.class.php: randFloat() added.

2009-02-19	Ivan Y. Khvostishkov

	* core/Cache/Cache.class.php: appendDaoMap() - better than replace.

2009-02-18	Viatcheslav Y. Tsyrulnik

	* main/Net/Http/CurlHttpClient.class.php: support for HTTP methods
	other than get/post and additional headers.

2009-02-18	Denis M. Gabaidulin

	* main/Criteria/ProjectionChain.class.php: dropByType() added.
	Drop projection by type from Criteria.

2009-02-16	Ivan Y. Khvostishkov

	* main/Flow/RedirectView.class.php: ability to build complex array
	values upon redirect (involving PrimitiveDateRange, for example).
